--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ footer{
 <body>
 	<nav class="navbar fixed-top navbar-expand-lg navbar-dark p-0">
 		<div class="container">
-			<a class="navbar-brand" href="#" style="font-family: aquire; font-size:25px;">Styx</a>
+			<a class="navbar-brand" href="#" style="font-family: aquire; font-size:25px;">Fix the bugs</a>
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item active" style="position: relative;">
 					<a class="nav-link flash" href="https://discord.com/invite/NuDwUvE"><i class="fas fa-arrow-right bounceRight"></i> Join ATWD! <i class="fas fa-arrow-left bounceLeft"></i></a>
